# barnum

./: .demo-failures.tmp  .gitignore  CODING_STANDARDS.md  CONTRIBUTING.md  Cargo.toml  FUTURE.md  FUTURE_REFACTORS.md  LICENSE  MENTAL_MODEL.md  README.md  TODO.md  bacon.toml  package.json  pnpm-lock.yaml  tsconfig.json
crates/barnum_ast/: Cargo.toml
crates/barnum_ast/src/: flat.rs  json_schema.rs  lib.rs
crates/barnum_builtins/: Cargo.toml
crates/barnum_builtins/src/: lib.rs
crates/barnum_cli/: Cargo.toml  build.rs
crates/barnum_cli/demos/: extract-config.ts  package.json  pnpm-lock.yaml  tsconfig.json
crates/barnum_cli/demos/branching/: barnum.config.ts  config.json  config.jsonc  demo.sh  graph.dot  run-demo.ts
crates/barnum_cli/demos/command/: barnum.config.ts  config.json  config.jsonc  demo.sh  graph.dot  run-demo.ts
crates/barnum_cli/demos/command-script/: barnum.config.ts  config.json  config.jsonc  demo.sh  run-demo.ts
crates/barnum_cli/demos/docs-and-validate/: demo.sh
crates/barnum_cli/demos/fan-out/: barnum.config.ts  config.json  config.jsonc  demo.sh  graph.dot  run-demo.ts
crates/barnum_cli/demos/hooks/: barnum.config.ts  config.json  config.jsonc  demo.sh  finally-hook.sh  process.sh  run-demo.ts
crates/barnum_cli/demos/linear/: barnum.config.ts  config.json  config.jsonc  demo.sh  graph.dot  run-demo.ts
crates/barnum_cli/demos/refactor-workflow/: barnum.config.ts  config.json  config.jsonc  graph.dot  run-demo.ts
crates/barnum_cli/demos/simple/: barnum.config.ts  config.json  config.jsonc  demo.sh  graph.dot  run-demo.ts
crates/barnum_cli/demos/typescript-handler/: barnum.config.ts  handler.ts
crates/barnum_cli/scripts/: barnum-agent.sh  fan-out-agent.sh
crates/barnum_cli/src/: lib.rs  main.rs
crates/barnum_cli/tests/: cli_integration.rs  config_subcommands.rs
crates/barnum_cli/tests/common/: mod.rs
crates/barnum_config/: Cargo.toml  README.md
crates/barnum_config/schemas/: config.schema.json
crates/barnum_config/src/: config.rs  docs.rs  lib.rs  maybe_linked.rs  resolved.rs  types.rs  value_schema.rs  zod.rs
crates/barnum_config/src/runner/: action.rs  dispatch.rs  hooks.rs  mod.rs  response.rs  submit.rs
crates/barnum_config/tests/: branching_transitions.rs  concurrency.rs  edge_cases.rs  finally_retry_bugs.rs  invalid_transitions.rs  linear_transitions.rs  ordered_agent.rs  retry_behavior.rs  schema_validation.rs  simple_termination.rs
crates/barnum_config/tests/common/: mod.rs
crates/barnum_engine/: Cargo.toml
crates/barnum_engine/src/: advance.rs  ancestors.rs  complete.rs  effects.rs  frame.rs  lib.rs  test_helpers.rs
crates/barnum_engine/tests/: completion_snapshot_tests.rs  engine_snapshot_tests.rs
crates/barnum_engine/tests/advance/: attempt_child.json  attempt_wrapping_parallel.json  branch_matching.json  chain_then_branch.json  chain_two_steps.json  deep_chain.json  foreach_array.json  foreach_empty.json  foreach_with_chain_body.json  loop_body.json  loop_with_chain_body.json  nested_chain_in_parallel.json  parallel_empty.json  parallel_three.json  single_invoke.json  step_named.json  step_root_recursive.json
crates/barnum_engine/tests/completion/: attempt_wraps_ok.json  branch_two_cases.json  chain_left_nested.json  chain_two_steps.json  deep_chain.json  foreach_two.json  handle_discard.json  handle_in_chain.json  handle_no_perform.json  handle_restart_body.json  handle_resume.json  handle_state_update.json  loop_continue_break.json  nested_chain_in_parallel.json  parallel_two.json  single_invoke.json  step_named.json
crates/barnum_engine/tests/snapshots/: completion_snapshot_tests__completion_snapshots@attempt_wraps_ok.json.snap  completion_snapshot_tests__completion_snapshots@branch_two_cases.json.snap  completion_snapshot_tests__completion_snapshots@chain_left_nested.json.snap  completion_snapshot_tests__completion_snapshots@chain_two_steps.json.snap  completion_snapshot_tests__completion_snapshots@deep_chain.json.snap  completion_snapshot_tests__completion_snapshots@foreach_two.json.snap  completion_snapshot_tests__completion_snapshots@handle_discard.json.snap  completion_snapshot_tests__completion_snapshots@handle_in_chain.json.snap  completion_snapshot_tests__completion_snapshots@handle_no_perform.json.snap  completion_snapshot_tests__completion_snapshots@handle_restart_body.json.snap  completion_snapshot_tests__completion_snapshots@handle_resume.json.snap  completion_snapshot_tests__completion_snapshots@handle_state_update.json.snap  completion_snapshot_tests__completion_snapshots@loop_continue_break.json.snap  completion_snapshot_tests__completion_snapshots@nested_chain_in_parallel.json.snap  completion_snapshot_tests__completion_snapshots@parallel_two.json.snap  completion_snapshot_tests__completion_snapshots@single_invoke.json.snap  completion_snapshot_tests__completion_snapshots@step_named.json.snap  engine_snapshot_tests__advance_snapshots@attempt_child.json.snap  engine_snapshot_tests__advance_snapshots@attempt_wrapping_parallel.json.snap  engine_snapshot_tests__advance_snapshots@branch_matching.json.snap  engine_snapshot_tests__advance_snapshots@chain_then_branch.json.snap  (+30 more)
crates/barnum_event_loop/: Cargo.toml
crates/barnum_event_loop/src/: lib.rs
crates/barnum_tui/: Cargo.toml
crates/barnum_tui/src/: app.rs  event.rs  footer.rs  header.rs  log_watcher.rs  main.rs  theme.rs
crates/barnum_types/: Cargo.toml
crates/barnum_types/src/: lib.rs
crates/gsd_json/: Cargo.toml  DESIGN.md
crates/gsd_json/src/: config.rs  lib.rs  runner.rs
crates/gsd_json/tests/: branching_transitions.rs  invalid_transitions.rs  linear_transitions.rs  schema_validation.rs  simple_termination.rs
crates/gsd_state/: Cargo.toml
crates/gsd_state/src/: lib.rs  reconstruct.rs  types.rs
crates/gsd_types/: Cargo.toml
crates/gsd_types/src/: lib.rs
crates/string_key_newtype/: Cargo.toml
crates/string_key_newtype/src/: lib.rs
crates/troupe_cli/: Cargo.toml  build.rs
crates/troupe_cli/src/: lib.rs  main.rs
crates/u32_newtype/: Cargo.toml
crates/u32_newtype/src/: lib.rs
(+845 files in other folders)
