[package]
name = "barnum_ast"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Workflow algebra AST types for Barnum"
keywords = ["workflow", "ast", "barnum"]
categories = ["data-structures"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
