[package]
name = "barnum_builtins"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
barnum_ast = { path = "../barnum_ast" }
serde_json.workspace = true
thiserror.workspace = true

[lints]
workspace = true
