[package]
name = "barnum_cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Barnum workflow engine CLI"
keywords = ["workflow", "engine", "cli"]
categories = ["command-line-utilities"]

[[bin]]
name = "barnum"
path = "src/main.rs"

[dependencies]

[lints]
workspace = true
