[package]
name = "barnum_cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Barnum workflow engine CLI"
keywords = ["workflow", "engine", "cli"]
categories = ["command-line-utilities"]

[[bin]]
name = "barnum"
path = "src/main.rs"

[dependencies]
barnum_ast = { path = "../barnum_ast" }
clap = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
