[package]
name = "barnum_config"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Declarative config-based task orchestrator library"
keywords = ["task", "orchestrator", "state-machine", "config", "agent"]
categories = ["development-tools"]

[[bin]]
name = "build_barnum_schema"
path = "src/bin/build_barnum_schema.rs"

[dependencies]
troupe = { path = "../troupe" }
troupe_cli = { path = "../troupe_cli" }
cli_invoker = { path = "../cli_invoker" }
barnum_state = { path = "../barnum_state" }
barnum_types = { workspace = true }
string_id = { workspace = true }
jsonschema = "0.29"
schemars = "0.8"
serde = { workspace = true }
serde_json = { workspace = true }
json5 = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
interprocess = { workspace = true }
rstest = { workspace = true }

[lints]
workspace = true
