[package]
name = "barnum_config"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Declarative config-based task orchestrator library"
keywords = ["task", "orchestrator", "state-machine", "config", "agent"]
categories = ["development-tools"]

[dependencies]
barnum_state = { path = "../barnum_state" }
barnum_types = { workspace = true }
string_id = { workspace = true }
schemars = "0.8"
serde = { workspace = true }
serde_json = { workspace = true }
json5 = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
troupe = { path = "../troupe" }
interprocess = { workspace = true }
rstest = { workspace = true }

[lints]
workspace = true
