[package]
name = "barnum_engine"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Pure state-machine workflow engine for Barnum"
keywords = ["workflow", "engine", "barnum"]
categories = ["data-structures"]

[dependencies]
barnum_ast = { path = "../barnum_ast" }
intern = { path = "../intern" }
serde = { workspace = true }
serde_json = { workspace = true }
slab = "0.4"
thiserror = { workspace = true }
u32_newtype = { path = "../u32_newtype" }

[dev-dependencies]
barnum_ast = { path = "../barnum_ast" }
intern = { path = "../intern" }
insta = { version = "1", features = ["glob"] }
serde = { workspace = true }
serde_json = { workspace = true }
string_key_newtype = { path = "../string_key_newtype" }

[lints]
workspace = true
