[package]
name = "barnum_event_loop"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
barnum_ast = { path = "../barnum_ast" }
barnum_engine = { path = "../barnum_engine" }
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
barnum_ast = { path = "../barnum_ast" }
intern = { path = "../intern" }
serde_json.workspace = true

[lints]
workspace = true
