[package]
name = "barnum_tui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Terminal dashboard for barnum workflows"

[[bin]]
name = "barnum-tui"
path = "src/main.rs"

[dependencies]
barnum_config = { path = "../barnum_config" }
barnum_state = { path = "../barnum_state" }
barnum_types = { path = "../barnum_types" }
ratatui = { workspace = true }
crossterm = { workspace = true }
notify = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
json5 = { workspace = true }
anyhow = "1"

[lints]
workspace = true
