[package]
name = "gsd_state"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "State persistence and resume for GSD runs"

[dependencies]
gsd_types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = "2"

[dev-dependencies]
serde_json = { workspace = true }

[lints]
workspace = true
