[package]
name = "troupe_cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "CLI for the troupe daemon"
keywords = ["agent", "pool", "task-queue", "daemon", "cli"]
categories = ["command-line-utilities"]

[[bin]]
name = "troupe"
path = "src/main.rs"

[dependencies]
troupe = { path = "../troupe" }
clap = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
